fix for squashed img

--- a/style.css
+++ b/style.css
@@ -171,6 +171,7 @@ article {
 
 .article-img {
     margin-bottom: 2rem;
+    max-width: 350px;
 }
 
 .contact{
